# Generative-AI

./: README.md
01_ChatGpt/step1_hello_world/: class1.ipynb
01_ChatGpt/step2_multiple_roles/: class2.ipynb
01_ChatGpt/step3_streaming_response/: step3.ipynb
02_ui_streamlit/: readme.md
02_ui_streamlit/step0_helloWorld/: hello_world.py  readme.md
02_ui_streamlit/step1_magic/: magic.py
02_ui_streamlit/step4_multipage_app/: multipage_app.py
02_ui_streamlit/step5_session_state/: 0_counter_without_session.py  1_counter_with_session.py  2_counter_callbacks.py
03_streamlit_genai_app/: Chat History.bak  app.py  database.py  model.py
04_everything_is_an_api/01_requests/: requests.ipynb
04_everything_is_an_api/02_pydantic/: model.ipynb
04_everything_is_an_api/06_ai_assisted_development/: file.py
04_everything_is_an_api/08_fastapi_todo/: data.py  model.py  temp.py  web.py
04_everything_is_an_api/08_fastapi_todo/CRUD_FastAPI/: .env  pyproject.toml
04_everything_is_an_api/08_fastapi_todo/CRUD_FastAPI/crud_fastapi/: .env  main.py  model.py  model_test.py  settings.py  web.py
04_everything_is_an_api/08_fastapi_todo/CRUD_FastAPI/tests/: test_main.py
04_everything_is_an_api/08_fastapi_todo/Poetry_Fast_API_Todo/: pyproject.toml
04_everything_is_an_api/08_fastapi_todo/Poetry_Fast_API_Todo/poetry_fast_api_todo/: data.py  model.py  web.py
05_all_in_one_microservices/cloud_dev_docker/00_container/container_test_vscode/: Dockerfile  README.md  pyproject.toml
05_all_in_one_microservices/cloud_dev_docker/00_container/container_test_vscode/.devcontainer/: devcontainer.json
05_all_in_one_microservices/cloud_dev_docker/00_container/container_test_vscode/container_test_vscode/: main.py
05_all_in_one_microservices/cloud_dev_docker/Docker/class1_poetry/: Dockerfile  pyproject.toml  todo.proto  todo_pb2.py
05_all_in_one_microservices/cloud_dev_docker/Docker/class1_poetry/.devcontainer/: devcontainer.json
05_all_in_one_microservices/cloud_dev_docker/Docker/class1_poetry/class1_poetry/: database.py  main.py  model.py  settings.py  web.py
05_all_in_one_microservices/cloud_dev_docker/Docker/class1_poetry/class1_poetry/services/: consumer.py  todo_services.py
05_all_in_one_microservices/cloud_dev_docker/class 11/oauth2_fastapi/: Dockerfile  pyproject.toml
05_all_in_one_microservices/cloud_dev_docker/class 11/oauth2_fastapi/oauth2_fastapi/: main.py
05_all_in_one_microservices/cloud_dev_docker/class 8/class8_compose_db/: Dockerfile  pyproject.toml
05_all_in_one_microservices/cloud_dev_docker/class 8/class8_compose_db/class8_compose_db/: main.py  model.py
05_ui_streamlit/step0_helloWorld/: hello_world.py
05_ui_streamlit/step3_bmi_calculator/: readme.md
05_ui_streamlit/step5_session_state/: 3_counter_callbacks_with_arguments.py
08_everything_is_an_api/02_pydantic/: code.ipynb
08_everything_is_an_api/05_docstring/: pydocs.ipynb
08_everything_is_an_api/06_ai_assisted_development/: readme.md
step1_hello_world/: class1.ipynb  readme.md
step5_function_calling/: step5.ipynb
step6_code_interpreter/: step6.ipynb
step7_assistant_knowledge_retrieval/: step7.ipynb
(+39 files in other folders)
